fix: fix chat res no blank too long caused ui problem

--- a/web/app/styles/markdown.scss
+++ b/web/app/styles/markdown.scss
@@ -54,6 +54,7 @@
   font-weight: 400;
   line-height: 1.5;
   word-wrap: break-word;
+  word-break: break-all;
   user-select: text;
 }
 
